Add pattern: Builder