@@ -1,3 +1,22 @@
+// project dependencies
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+}
+
+plugins {
+    id 'checkstyle'
+}
+
+
+apply plugin: 'java'
+apply plugin: 'application'
+
+
 ext {
     // SPRING_VERSION
     COMMONS_MATH_VER = '3.6.1'
@@ -15,27 +34,9 @@ ext {
     TEST_ASSERTJ_VER = '3.18.1'
 }
 
-
-// project dependencies
-buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-}
-
-apply plugin: 'java'
-apply plugin: 'application'
-
-
 java {
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(13)
-//    }
-    sourceCompatibility = JavaVersion.VERSION_15
-    targetCompatibility = JavaVersion.VERSION_15
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 repositories {
@@ -77,15 +78,8 @@ configurations {
     }
 }
 
-// enable PREVIEW features
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
+checkstyle {
+    toolVersion = '8.41.1'
+    configFile = file("$projectDir/google_checks.xml")
+    ignoreFailures = true
 }
